--- a/style.css
+++ b/style.css
@@ -46,3 +46,26 @@ h1{
     margin-top: 40px;
     margin-bottom: 30px;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+    margin: 0px;
+    }
+
+    .container {
+        background-color: #fffedf;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 5rem;
+        width: auto;
+    }
+
+    .btn {
+        margin-top: 40px;
+        display: flex;
+        margin-bottom: 30px;
+        width: 100%;
+        justify-content: space-evenly;
+    }   
+}
